<resources>
    <string name="app_name">MediaXplore</string>
    <string name="tab_artists">Artists</string>
    <string name="tab_albums">Albums</string>
    <string name="mail_subject">A copy of my MediaStore for debugging purposes</string>
    <string name="albumInfo">%d tracks</string>
    <string name="yearRange">%04d - %04d</string>
    <string name="artistInfo">%d tracks - %d albums</string>
    <string name="filter_default">Default</string>
    <string name="action_sort_albums">Sort albums</string>
    <string name="action_sort_artists">Sort artists</string>
    <string name="filter_title">Title</string>
    <string name="filter_year">Release year</string>
    <string name="filter_song_count">Number of songs</string>
    <string name="filter_name">Artist name</string>
    <string name="filter_album_count">Number of albums</string>
    <string name="filter_artist">Artist name</string>
    <string name="share_format_table">As data table</string>
    <string name="share_format_csv">As CSV file</string>

    <style name="mail_subject">A copy of my MediaStore for debugging purposes</style>
</resources>
