<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_24dp"
        android:title="@string/action_sort_albums"
        app:showAsAction="ifRoom">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/filter_default"
                    android:title="@string/filter_default" />

                <item
                    android:id="@+id/filter_title"
                    android:title="@string/filter_title" />

                <item
                    android:id="@+id/filter_artist"
                    android:title="@string/filter_artist"/>

                <item
                    android:id="@+id/filter_year"
                    android:title="@string/filter_year" />

                <item
                    android:id="@+id/filter_song_count"
                    android:title="@string/filter_song_count" />
            </group>
        </menu>
    </item>
</menu>